--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "athena-client": "^1.0.8",
     "koa": "^2.2.0",
     "koa-compress": "^2.0.0",
     "koa-route": "^3.2.0",
