--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "athena-client": "^1.0.8",
     "koa": "^2.2.0",
     "koa-compress": "^2.0.0",
+    "koa-nunjucks-2": "^3.0.2",
     "koa-route": "^3.2.0",
     "koa-router": "^7.3.0",
     "koa-static": "^3.0.0",
